# swagger/swagger.json
@@ -8,220 +8,6 @@
     },
     "basePath": "/park/v1",
     "paths": {
-        "/comment/": {
-            "get": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "查询评论",
-                "description": "查询评论 http://127.0.0.1:8080/park/v1/user\n\u003cbr\u003e",
-                "operationId": "CommentController.查询评论",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "查询参数，用\u0026分隔",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "排序",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "升序asc，降序desc",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "限制个数，默认10",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "偏移，默认0",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "添加评论",
-                "description": "添加评论\n\u003cbr\u003e",
-                "operationId": "CommentController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "评论结构体",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "批量删除评论",
-                "description": "create User\n\u003cbr\u003e",
-                "operationId": "CommentController.批量删除评论",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "只填id字段即可",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.User"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/comment/test": {
-            "get": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "测试",
-                "description": "测试\n\u003cbr\u003e",
-                "operationId": "CommentController.Get",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            }
-        },
-        "/comment/{id}": {
-            "get": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "获取评论",
-                "description": "获取评论根据ID\n\u003cbr\u003e",
-                "operationId": "CommentController.Get",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "评论ID",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "更新评论",
-                "description": "更新评论\n\u003cbr\u003e",
-                "operationId": "CommentController.更新评论",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "评论ID",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "评论结构体内容",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "comment"
-                ],
-                "summary": "删除评论",
-                "description": "删除评论\n\u003cbr\u003e",
-                "operationId": "CommentController.删除评论",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "删除评论的ID",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ResponseData"
-                        }
-                    }
-                }
-            }
-        },
         "/user/": {
             "get": {
                 "tags": [
@@ -494,45 +280,6 @@
             "title": "interface",
             "type": "object"
         },
-        "models.Comment": {
-            "title": "Comment",
-            "type": "object",
-            "properties": {
-                "content": {
-                    "description": "评论内容",
-                    "type": "string"
-                },
-                "create_time": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "image": {
-                    "description": "image",
-                    "type": "string"
-                },
-                "name": {
-                    "description": "用户名",
-                    "type": "string"
-                },
-                "score": {
-                    "description": "评分",
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "update_time": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User",
-                    "description": "RelForeignKey relation"
-                }
-            }
-        },
         "models.Information": {
             "title": "Information",
             "type": "object",
@@ -558,13 +305,6 @@
                 "address": {
                     "description": "钱包地址",
                     "type": "string"
-                },
-                "comments": {
-                    "description": "此人言论数组",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Comment"
-                    }
                 },
                 "content": {
                     "description": "介绍",
